force-app/main/default/objects/ContentVersion/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <inlineHelpText>Select the category that best describes this file</inlineHelpText>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Box Templates</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Copy &amp; Messaging</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Game Specific</fullName>
            </value>
            <value>
                <fullName>Logo &amp; Branding Guidelines</fullName>
            </value>
            <value>
                <fullName>Policies and Guidelines</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Product Imagery</fullName>
            </value>
            <value>
                <fullName>Product Literature</fullName>
            </value>
            <value>
                <fullName>Product Presentations</fullName>
            </value>
            <value>
                <fullName>Product Specifications</fullName>
            </value>
            <value>
                <fullName>Sales Tools</fullName>
            </value>
            <value>
                <fullName>System Test Documentation</fullName>
            </value>
            <value>
                <fullName>Technical Presentations</fullName>
            </value>
            <value>
                <fullName>Technical Resources</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
            <value>
                <fullName>Training Resources</fullName>
            </value>
            <value>
                <fullName>Vertical Presentations</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Wallpaper</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Webinar Replay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>