force-app/main/default/objects/ContentVersion/fields/AttachmentParentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentParentId__c</fullName>
    <label>AttachmentParentId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>