force-app/main/default/objects/ContentVersion/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <label>Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AI for Business (DL04)</fullName>
            </value>
            <value>
                <fullName>AI for Developers (DL13)</fullName>
            </value>
            <value>
                <fullName>AI for Enterprise (DL14)</fullName>
            </value>
            <value>
                <fullName>Applications Awareness (HPC08)</fullName>
            </value>
            <value>
                <fullName>CRISP Campaign (IX07)</fullName>
            </value>
            <value>
                <fullName>Cryo-EM (IX10)</fullName>
            </value>
            <value>
                <fullName>CSP Campaign (IX13)</fullName>
            </value>
            <value>
                <fullName>Data Science Workstation (AN03)</fullName>
            </value>
            <value>
                <fullName>DGX Systems: Solving the World&apos;s AI Challenges (DL09)</fullName>
            </value>
            <value>
                <fullName>EGX Campaign (HPC09)</fullName>
            </value>
            <value>
                <fullName>Energy Campaign (IX14)</fullName>
            </value>
            <value>
                <fullName>Financial Services (IX06)</fullName>
            </value>
            <value>
                <fullName>Genomics (IX09)</fullName>
            </value>
            <value>
                <fullName>GPU for Public Cloud (RW05)</fullName>
            </value>
            <value>
                <fullName>GPU Rendering (PV04)</fullName>
            </value>
            <value>
                <fullName>GRID for Healthcare (IX12)</fullName>
            </value>
            <value>
                <fullName>Healthcare Campaign (IX03)</fullName>
            </value>
            <value>
                <fullName>HER Campaign (IX01)</fullName>
            </value>
            <value>
                <fullName>HPC Campaign (HPC06)</fullName>
            </value>
            <value>
                <fullName>HPC for Developers (HPC03)</fullName>
            </value>
            <value>
                <fullName>HPC Platform (HPC07)</fullName>
            </value>
            <value>
                <fullName>I am AI (DL01)</fullName>
            </value>
            <value>
                <fullName>Inception (IN01)</fullName>
            </value>
            <value>
                <fullName>Industrial Manufacturing (IX08)</fullName>
            </value>
            <value>
                <fullName>Instruments Campaign (IX18)</fullName>
            </value>
            <value>
                <fullName>Jetson Ecosystem &amp; Community (EM16)</fullName>
            </value>
            <value>
                <fullName>Jetson Nano (EM06)</fullName>
            </value>
            <value>
                <fullName>Jetson Xavier NX (EM15)</fullName>
            </value>
            <value>
                <fullName>Laptops (RW02)</fullName>
            </value>
            <value>
                <fullName>Mainstream GPU Infrastructure (HPC05)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>