force-app/main/default/objects/ContentVersion/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>