force-app/main/default/objects/ContentVersion/fields/Created_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Formula__c</fullName>
    <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>