force-app/main/default/objects/ContentVersion/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <formula>&apos;/&apos;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Link</label>
    <type>Text</type>
</CustomField>