force-app/main/default/objects/ContentVersion/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architecture, Engineering, and Construction</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Embedded/Edge Computing</fullName>
            </value>
            <value>
                <fullName>Energy/Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Higher Education and Research</fullName>
            </value>
            <value>
                <fullName>Industrial Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>