force-app/main/default/objects/ContentVersion/fields/Language_Region__c.field-meta.xml
<CustomField>
    <fullName>Language_Region__c</fullName>
    <description>Language field assigned to localized marketing content. Do not reorder the pick list options as it will break the EMEA Lite Portal auto content filtering.</description>
    <label>Language (Region)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Czech (CZ)</fullName>
            </value>
            <value>
                <fullName>English North American (en_US)</fullName>
            </value>
            <value>
                <fullName>English European (en_GB)</fullName>
            </value>
            <value>
                <fullName>French (FR)</fullName>
            </value>
            <value>
                <fullName>German (DE)</fullName>
            </value>
            <value>
                <fullName>Italian (IT)</fullName>
            </value>
            <value>
                <fullName>Japanese (JA)</fullName>
            </value>
            <value>
                <fullName>Korean (KO)</fullName>
            </value>
            <value>
                <fullName>Polish (PL)</fullName>
            </value>
            <value>
                <fullName>Portuguese Brazilian (pt_BR)</fullName>
            </value>
            <value>
                <fullName>Russian (RU)</fullName>
            </value>
            <value>
                <fullName>Chinese Simplified (zh_CN)</fullName>
            </value>
            <value>
                <fullName>Spanish (ES)</fullName>
            </value>
            <value>
                <fullName>Chinese Traditional (zh_TW)</fullName>
            </value>
            <value>
                <fullName>Turkish (TR)</fullName>
            </value>
            <value>
                <fullName>Portuguese European (pt_PT)</fullName>
            </value>
            <value>
                <fullName>Spanish Mexican (cs_MX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>