force-app/main/default/objects/ContentVersion/fields/Preview_Image__c.field-meta.xml
<CustomField>
    <fullName>Preview_Image__c</fullName>
    <description>The preview image displayed when a user selects the Preview link in the document browser.</description>
    <inlineHelpText>The preview image displayed when a user selects the Preview link in the document browser.</inlineHelpText>
    <label>Preview Image</label>
    <type>Url</type>
</CustomField>