force-app/main/default/objects/ContentVersion/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Vision</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>DRIVE</fullName>
            </value>
            <value>
                <fullName>GeForce Desktop</fullName>
            </value>
            <value>
                <fullName>GeForce Notebook</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>NGC</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>Tegra</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>vGPU Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>