force-app/main/default/objects/ContentVersion/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tesla M2090</fullName>
            </value>
            <value>
                <fullName>Tesla Personal Super Computers</fullName>
            </value>
            <value>
                <fullName>Tesla C2050/C2070</fullName>
            </value>
            <value>
                <fullName>Tesla S2050</fullName>
            </value>
            <value>
                <fullName>Tesla S1070</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>