force-app/main/default/objects/ContentVersion/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tesla Bio Workbench</fullName>
            </value>
            <value>
                <fullName>Top 500</fullName>
            </value>
            <value>
                <fullName>The GPU Test Drive</fullName>
            </value>
            <value>
                <fullName>TPP Jacket/CULA Promotion</fullName>
            </value>
            <value>
                <fullName>Manufacturing Campaign</fullName>
            </value>
            <value>
                <fullName>Awareness Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>