force-app/main/default/objects/ContentVersion/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <label>Technologies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Rendering</fullName>
            </value>
            <value>
                <fullName>Deep Learning</fullName>
            </value>
            <value>
                <fullName>Virtual Reality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>