force-app/main/default/objects/ContentVersion/fields/Tegra_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Tegra_Asset_Type__c</fullName>
    <label>Tegra Asset Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy &amp; Messaging</fullName>
            </value>
            <value>
                <fullName>Email Templates</fullName>
            </value>
            <value>
                <fullName>Game Assets</fullName>
            </value>
            <value>
                <fullName>Logos &amp; Branding Guidelines</fullName>
            </value>
            <value>
                <fullName>Print Ad Templates</fullName>
            </value>
            <value>
                <fullName>Product Imagery</fullName>
            </value>
            <value>
                <fullName>Product Literature</fullName>
            </value>
            <value>
                <fullName>Product Presentations</fullName>
            </value>
            <value>
                <fullName>Product Specifications</fullName>
            </value>
            <value>
                <fullName>Sales Tools</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Videos</fullName>
            </value>
            <value>
                <fullName>Wallpapers</fullName>
            </value>
            <value>
                <fullName>Web Banners</fullName>
            </value>
            <value>
                <fullName>Web Page Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>