force-app/main/default/objects/ContentVersion/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <description>Thumbnail image displayed in the document search tool and recently added items tool.</description>
    <inlineHelpText>Thumbnail image displayed in the document search tool and recently added items tool.</inlineHelpText>
    <label>Thumbnail</label>
    <type>Url</type>
</CustomField>