force-app/main/default/objects/ContentVersion/recordTypes/Marketing_Assets.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Assets</fullName>
    <active>true</active>
    <label>Product Content</label>
</RecordType>