force-app/main/default/objects/ContentVersion/recordTypes/QPB_Statement.recordType-meta.xml
<RecordType>
    <fullName>QPB_Statement</fullName>
    <active>true</active>
    <label>QPB Statement</label>
</RecordType>