force-app/main/default/objects/ContentVersion/recordTypes/Tegra_Marketing_Assets.recordType-meta.xml
<RecordType>
    <fullName>Tegra_Marketing_Assets</fullName>
    <active>true</active>
    <label>Tegra Marketing Assets</label>
</RecordType>